# pprintjson

./: .coveragerc  LICENSE  MANIFEST.in  Makefile  README.md  format.sh  publish.sh  pyproject.toml  setup.py  test.sh
.github/: dependabot.yml
.github/workflows/: python-package.yaml
docs/source/: conf.py  index.md
pprintjson/: .coveragerc  __init__.py  __main__.py  pprintjson.py  test_pprintjson.py
