[tool.poetry]
name = "pprintjson"
version = "1.4.2"
description = "A json pretty printer for python"
authors = ["Travis Clarke <travis.m.clarke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pygments = ">=1.6"
simplejson = ">=2.0.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.14.6"
twine = "^3.1.1"
pytest = "^5.4.1"
tox-pyenv = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
