[tool.poetry]
name = "pprintjson"
version = "1.4.2"
description = "A json pretty printer for python"
authors = ["Travis Clarke <travis.m.clarke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pygments = ">=1.6"
simplejson = ">=2.0.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
twine = "^3.1.1"
pytest = "^5.4.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
